Bug 1292774 - Turn to use gfxCriticalNote for mismatched d3d11 device in CompositorD3D11::HandleError(). r=dvander, a=ritu

--HG--
extra : source : 1d1392c28c8df3a0996d8987216bb399ec431dde