gfx/layers/d3d11/CompositorD3D11.cpp
@@ -1714,7 +1714,7 @@ CompositorD3D11::HandleError(HRESULT hr, Severity aSeverity)
   }
 
   if (mDevice && DeviceManagerD3D11::Get()->GetCompositorDevice() != mDevice) {
-    gfxCriticalError() << "Out of sync D3D11 devices in HandleError, " << (int)mVerifyBuffersFailed;
+    gfxCriticalNote << "Out of sync D3D11 devices in HandleError, " << (int)mVerifyBuffersFailed;
   }
 
   HRESULT hrOnReset = S_OK;
